# workbench

./: .flake8  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  Readme.md  SECURITY.md  constraints.txt  deploy_docker.sh  dev-requirements.txt  index.html  mkdocs.yml  objects.inv  publish.sh  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-no-dash.txt  requirements.txt  sageworks_config.ini  setup.cfg  setup.py  tox.ini
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
advanced_models/: index.html
aws_setup/: aws_account_check.py  aws_account_check_deep.py  aws_account_setup.py  aws_identity_check.py  build_ml_pipeline.py  index.html
blogs/: index.html
blogs_research/: index.html
chem_utils/: index.html
ci/: README.md  check_constraints.py  endpoint_import_smoke.py  endpoint_smoke_requirements.txt  index.html  lock.sh  template_import_check.py  workbench_ci_config.json
cloudwatch/: index.html
confidence/: index.html
config/: sageworks_config.ini
data/: abalone.csv  karate_graph.json  test_data.csv  test_data.json  wine_dataset.csv
docs/: README.md  admin_notes.md  docker_push.md  enterprise.md  index.md  pypi_release.md  sageworks_api_classes.md  sageworks_classes.md  sageworks_classes_concepts.md  scp_consulting.md
enterprise/: index.html
examples/: data_to_data.py  data_to_data_example.py  data_to_features.py  datasource_from_df.py  datasource_query.py  datasource_stats.py  datasource_to_featureset.py  endpoint_details.py  endpoint_inference.py  endpoint_metrics.py  featureset_eda.py  featureset_query.py  featureset_stats.py  featureset_to_model.py  full_ml_pipeline.py  glue_hello_world.py  glue_load_s3_bucket.py  light_transform.py  meta_list_endpoints.py  meta_list_models.py  meta_model_metrics.py  model_metrics.py  model_to_endpoint.py
experiments/: chemprop_model.py  cleanlab_bug_report.py  confidence_roc_curve.py  coverage_probability.py  db_scan_test.py  feature_set_core.py  log_testing.py  mapie_model.py  meta_model_analysis.py  neighbor_outliers.py  networkx_id.py  prediction_intervals.py  pytorch_model.py  quantile_regression.py  quantile_regression_2.py  quantile_regression_3.py  regression_confidence.py  residual_analysis.py  rocauc_testing.py  scatter_zoom_issue.py  sol_pipeline.py  view_manager.py
feature_endpoints/: README.md  _common.py  rdkit_3d_boltzmann_v1.py  rdkit_3d_v1.py  rdkit_mordred_keep_salts_v1.py  rdkit_mordred_v1.py  smiles_to_2d_3d_salt_v2.py  smiles_to_2d_3d_v1.py  smiles_to_2d_3d_v2.py  smiles_to_2d_keep_salts_3d_v2.py  smiles_to_2d_keep_salts_v1.py  smiles_to_2d_salt_v1.py  smiles_to_2d_v1.py  smiles_to_3d_fast_v1.py  smiles_to_3d_full_v1.py  smiles_to_3d_v1.py  smiles_to_3d_v2.py  smiles_to_fingerprints_v1.py
getting_started/: index.html
glue/: index.html
glue_jobs/: create_glue_workflow_with_trigger.py  example_glue_job.py  glue_job_debug.py  glue_job_pipeline.py  glue_mixed_case.py
lambda_layer/: Dockerfile  README.md  index.html  publish_layer.sh  publish_sageworks_layer.sh  push_layer_to_s3.sh
lambda_layers/: .gitignore  README.md  build_deploy.sh  requirements.txt
meta_models/: index.html
ml_pipelines/: aqsol_feature_set.py  hyper_uq.py  index.html
model_docker_images/: Readme.md
model_utils/: index.html
models/: index.html
notebooks/: Feature_Resolution.ipynb  Inference_On_Legacy_Models.ipynb  ML_Pipeline_with_SageWorks.ipynb  ML_Pipeline_with_SageWorks_2.ipynb  ML_Pipeline_with_Workbench.ipynb  ML_Pipeline_with_Workbench_2.ipynb  Outliers_in_SageWorks.ipynb  Outliers_in_Workbench.ipynb  Regression_Confidence_Experiments.ipynb  Residual_Analysis.ipynb
open_admet/: README.md  all_models.py  caco2_efflux.py  hello_world.py  load_data.py  model_metrics.md  per_target_metrics.md  run_inference.py
open_admet_pxr/: README.md  all_models.py  create_feature_sets.py  load_data.py  pipelines.json  pxr_3d.py  pxr_chemprop_mt_feature_sets.py  pxr_feature_sets.py  pxr_pytorch_3dv2.py  pytorch_experiments.py
plugins/: index.html
presentations/: README.md  index.html
repl/: index.html
sagemaker_images/: Readme.md  build_deploy.sh  deploy_all
sageworks_api_classes/: index.html
sageworks_classes/: index.html
sageworks_classes_concepts/: index.html
scp_consulting/: index.html
scripts/: active_logs.sh  ag_table_row_selection.py  athena_ddl_mixed_case.py  bad_features_test.py  benchmark_fp_proximity.py  capture_inference_metrics.py  check_training_rows.py  compare_dataframes.py  compare_model_packages.py  convert_training_views.py  copy_data_catalog_db.py  data_source_tags.py  db_scan_test.py  delete_data_capture.py  delete_invalid_views.py  delete_redis_keys.py  delete_sageworks_glue_database.sh  dns_data_to_features.py  endpoint_import_smoke.py  endpoint_inference_launch.py  endpoint_timing.py  endpoints_ready.py  ensure_health_tags.py  find_smiles_issues.py  generate_jsonl_data.py  get_tags.py  glue_mixed_case.py  inference_on_endpoint.py  instantiation_timings.py  list_data_sources.py  migrate_data_source.py  model_cache_refresh.py  model_endpoint_refresh.py  model_endpoint_sanity_check.py  model_to_endpoint_debugging.py  models_ready.py  monitor_cloud_watch.py  monitor_endpoint.py  monitor_event_bridge.py  onboard_endpoints.py  (+14 more)
search/: search_index.json
stylesheets/: extra.css
test_artifacts/: create_aqsol_artifacts.py  create_aqsol_artifacts_all.py  create_aqsol_rt_artifacts.py  create_aqsol_uq_artifacts.py  create_basic_test_artifacts.py  create_copy_artifacts.py  create_empty_model_group.py  create_endpoints_for_timing.py  create_knn_artifacts.py  create_meta_endpoints.py  create_pipeline_model.py  create_proximity_models.py  create_quant_regression_artifacts.py  create_realtime_endpoint.py  create_sagemaker_pipeline_model.py  create_training_adjusted_artifacts.py  create_wine_artifacts.py  delete_stress_test_artifacts.py  delete_test_artifacts.py  hyper_testing.py  regression_ensemble.py  stress_test_aws.py
tests/: README.md  conftest.py  (+9 more)
(+2173 files in other folders)
