[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37.0", "setuptools_scm>=6.4.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[project]
name = "workbench"
dynamic = ["version"]
description = "Workbench: A Dashboard and Python API for creating and deploying AWS SageMaker Model Pipelines"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["SageMaker", "Machine Learning", "AWS", "Python", "Utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
authors = [{ name = "SuperCowPowers LLC", email = "support@supercowpowers.com" }]

dependencies = [
    # AWS clients & SDKs
    # boto3/botocore/cryptography floors come from sagemaker-core's
    # transitive requirements (sagemaker → sagemaker-core →
    # boto3>=1.42.2, cryptography>=46.0.0).
    "boto3 >= 1.42.2",
    "botocore >= 1.42.2",
    "awswrangler >= 3.4.0",
    "sagemaker >= 3.6.0, < 4.0",
    "redis >= 5.0.1",
    "cryptography >= 46.0.0",
    "requests >= 2.26.0",
    # aiobotocore floor — each release pins botocore to a one-minor window,
    # so without this pip backtracks through every historical version hunting
    # for a botocore match. Bump if installs feel slow again.
    "aiobotocore >= 3.7.0",
    # Data / ML
    "pandas >= 2.2.1, < 3.0",
    "scikit-learn >= 1.5.2",
    "xgboost >= 3.0.3",
    "lightgbm >= 4.6.0",
    "joblib >= 1.3.2",
    # Cheminformatics
    "rdkit >= 2026.3.1",
    "mordredcommunity >= 2.0.6",
    # REPL & config
    "ipython >= 8.37.0",
    "pyreadline3; sys_platform == 'win32'",
    # Plotting (matplotlib lives here because workbench_shell has a show()
    # command that's useful for showing 2D plots of chemical structures
    "matplotlib >= 3.9.2",
]

[project.optional-dependencies]
misc = [
    "networkx >= 3.2",
    "umap-learn >= 0.5.8",
]
ui = [
    "plotly >= 6.5.0",
    "dash >= 4.0.0",
    "dash-bootstrap-components >= 1.6.0",
    "dash_ag_grid >= 33.3.3",
]
dev = ["pytest", "pytest-sugar", "pytest-xdist", "coverage", "pytest-cov", "flake8", "black"]
all = [
    "workbench[ui]",
    "workbench[dev]",
    "workbench[misc]",
]

[project.urls]
Homepage = "https://github.com/SuperCowPowers/workbench"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"workbench" = [
    "resources/signature_verify_pub.pem",
    "resources/open_source_api.key",
    "model_scripts/**",
    "themes/**"
]

[tool.setuptools.exclude-package-data]
"workbench" = ["model_scripts/**/generated_*.py"]

[project.scripts]
workbench = "workbench.repl.workbench_shell:launch_shell"
cloud_watch = "workbench.scripts.monitor_cloud_watch:main"
workbench_config = "workbench.scripts.show_config:main"
df_store = "workbench.scripts.df_store:main"
glue_launcher = "workbench.scripts.glue_launcher:main"
ml_pipeline_batch = "workbench.scripts.ml_pipeline_batch:main"
ml_pipeline_sqs = "workbench.scripts.ml_pipeline_sqs:main"
ml_pipeline_launcher = "workbench.scripts.ml_pipeline_launcher:main"
ensemble_sim = "workbench.scripts.ensemble_sim:main"
lambda_test = "workbench.scripts.lambda_test:main"
endpoint_test = "workbench.scripts.endpoint_test:main"
training_test = "workbench.scripts.training_test:main"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-v --cov=workbench --cov-report term-missing"
python_files = "*.py"
python_functions = "test"
norecursedirs = [".tox", ".git", "*.egg-info", "__pycache__", "dist", "build"]
markers = [
    "long: marks tests as long (deselect with '-m \"not long\"')",
    "corner_case: marks corner case tests not run by default (deselect with '-m \"not corner_case\"')"
]

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]
