[bdist_wheel]
universal = 1

[aliases]
release = sdist bdist_wheel upload -r pypi
test_release = sdist bdist_wheel upload -r pypitest

[metadata]
description-file = README.md

[flake8]
extend-ignore = E203
max-line-length = 120


[tool:pytest]
addopts= -v --cov-report term-missing
python_files=*.py
python_functions=test
norecursedirs=.tox .git *.egg-info __pycache__ dist build
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

[coverage:run]
relative_files = True
