[bdist_wheel]
universal = 1

[metadata]
description_file = README.md

[flake8]
extend-ignore = E203
max-line-length = 120

[tool:pytest]
addopts= -v --cov-report term-missing
python_files=*.py
python_functions=test
norecursedirs=.tox .git *.egg-info __pycache__ dist build
markers =
    long: marks tests as long (deselect with '-m "not long"')

[coverage:run]
relative_files = True
